<resources>
    <string name="app_name">BCG_Demo</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="email">Email</string>
    <string name="required">Required</string>
    <string name="password">Password</string>
    <string name="forgot_your_pass">Forgot Your password?</string>
    <string name="remember_me">Remember me!</string>
    <string name="login">Login</string>
    <string name="err_empty_email">Please Enter Your Email.</string>
    <string name="err_invalid_email">Please Enter a Valid Email.</string>
    <string name="err_empty_password">Please Enter your password.</string>
    <string name="separator">/</string>
    <string name="update_steps_to_google_fit">Update Steps To Google Fit</string>
    <string name="dialogTitle">Alert!</string>
    <string name="no_records">No Records Available For This Account As of Now.</string>
    <string name="step_for_the_day_prefix">Number of aggregate steps recorded for the last day are:</string>
    <string name="err_internet_check">Please check your internet connection!</string>
    <string name="err_password_length">Your password must be of minimum 6 characters.</string>
</resources>