<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <data>
        <variable
            name="LoginViewModel"
            type="com.skills.bcg_demo.ui.login_components.LoginViewModel" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/cl_root_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginEnd="@dimen/margin_standard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_ic_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_email_cont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_xx_large"
            android:paddingTop="@dimen/padding_standard"
            android:paddingBottom="@dimen/padding_standard"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_ic_icon">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_label_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingStart="10dp"
                android:text="@string/email"
                android:textSize="@dimen/text_size_standard"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/et_email"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.30"
                tools:ignore="RtlSymmetry"
                android:paddingLeft="10dp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints="username"
                android:hint="@string/required"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingStart="@dimen/padding_xx_small"
                android:paddingEnd="@dimen/padding_xx_small"
                android:textSize="@dimen/text_size_large"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/tv_label_email"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.70"
                tools:ignore="RtlSymmetry" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_pass_cont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:paddingTop="@dimen/padding_standard"
            android:paddingBottom="@dimen/padding_standard"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_email_cont">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_label_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingStart="10dp"
                android:text="@string/password"
                android:textSize="@dimen/text_size_standard"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.30"
                tools:ignore="RtlSymmetry"
                android:paddingLeft="10dp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:gravity="center_vertical"
                android:hint="@string/required"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingStart="5dp"
                android:textSize="@dimen/text_size_large"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/tv_label_password"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.70"
                tools:ignore="RtlSymmetry"
                android:paddingLeft="5dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_cont_forgot_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_standard"
            app:layout_constraintTop_toBottomOf="@id/cl_pass_cont">

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cb_remember_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:padding="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember_me"
                android:textSize="@dimen/text_size_small"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/cb_remember_me"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_your_pass"
                android:textSize="@dimen/text_size_small"
                android:visibility="gone"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:paddingLeft="@dimen/padding_small"
            android:paddingEnd="@dimen/padding_small"
            android:layout_marginTop="@dimen/margin_standard"
            android:gravity="center"
            android:text="@string/login"
            android:textSize="@dimen/text_size_button"
            app:layout_constraintTop_toBottomOf="@+id/cl_cont_forgot_pass"
            android:paddingRight="@dimen/padding_small" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>